---
source: crates/mcf/src/syntax/grammar/nbt.rs
expression: "parse_nbt(\"['hello', 123, true]\")"
---
Root(File)
Group(NbtSequence) at 0:0 - 0:20 {
    Token(LBracket) `[` at 0:0 - 0:1
    Group(NbtString) at 0:1 - 0:8 {
        Token(QuotedString) `'hello'` at 0:1 - 0:8
    }
    Token(Comma) `,` at 0:8 - 0:9
    Token(Whitespace) ` ` at 0:9 - 0:10
    Group(NbtNumber) at 0:10 - 0:13 {
        Joined(Float) `123` at 0:10 - 0:13
    }
    Token(Comma) `,` at 0:13 - 0:14
    Token(Whitespace) ` ` at 0:14 - 0:15
    Joined(NbtBoolean) `true` at 0:15 - 0:19
    Token(RBracket) `]` at 0:19 - 0:20
}

